--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,7 @@
         <div class="menumar desktop"></div>
 
         <div id='frontendMenuMobil' class='flexColumn mobile'>
-            
+
             <div id="botones">
                 <div class='botoMenu' onclick='navegacio.canviaSeccio("frontendHome")'>INICI</div>
                 <div class='botoMenu' onclick='navegacio.canviaSeccio("frontendPresentacio")'>PRESENTACIÓ</div>
@@ -241,5 +241,8 @@
                 <div id='backofficeUsuarisPopupError' class='none'>Error al guardar les dades ...</div>
             </div>
         </div>
+        <footer class="footer">
+            <a href="https://github.com/aitorDVR/servidorWeb">REPOSITORI GITHUB</a>
+        </footer>
     </body>
 </html>
