--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
         <script src='/web/script-popups.js'></script>
         <script src='/web/script-seccio-backofficeusuaris.js'></script>
         <script src='/web/script-seccio-frontendproductes.js'></script>
+        <script src='/web/script-seccio-frontendproducte.js'></script>
         <script src='/web/script-utils.js'></script>
         <script src='/web/script.js'></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
@@ -60,7 +61,7 @@
             HOLA
         </div>
 
-        <div id='frontendPresentacio'>
+        <div id='frontendPresentacio' class="fondoweb">
             <H4>BENVINGUTS A LA MILLOR WEB DE AGENCIES DE VIATGES</H4>
             <div class="fuentepre">
                <h5>Hola, som una empresa de viatges de on volem que busquis el millor lloc possible per a tu i per a nosaltres amb una qualitat i preu molt bo. Si explores atentament aquesta pagina pots veure llocs rurals o diferents alternatives per els teus gustos. Apunta't ara i serem feliços tu i nosaltres.</h5> 
@@ -137,12 +138,16 @@
             </div>
         </div>
 
-        <div id='frontendProductes'>
+        <div id='frontendProductes' class="fondoweb">
             <div id='productesLoading'><div id="p2" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div></div>
             <div id='productesContinguts' class='flexColumn'></div>
         </div>
 
-        <div id='frontendContacte'>
+        <div id='frontendProducte' class="fondoweb">
+            <div id='producteLoading'><div id="p2" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div></div>
+            <div id='producteContinguts' class='flexColumn'></div>
+        </div>
+        <div id='frontendContacte' class="fondoweb">
             <p>On es troba nostra empresa?</p>
             <div class="expContactes">Nostra empresa es troba en Castelldefels, una ciutat de Barcelona en Espanya. <br><br> Telefón movil: 678 673 242</div> 
             <p>Ubicació en Google Maps</p>
