--- a/web/index.html
+++ b/web/index.html
@@ -148,10 +148,10 @@
             <div id='producteContinguts' class='flexColumn'></div>
         </div>
         <div id='frontendContacte' class="fondoweb">
-            <p>On es troba nostra empresa?</p>
-            <div class="expContactes">Nostra empresa es troba en Castelldefels, una ciutat de Barcelona en Espanya. <br><br> Telefón movil: 678 673 242</div> 
-            <p>Ubicació en Google Maps</p>
-            <div class="expContactes">Es situa al costat de la plaça de la Lluna com podeu veure a baix.</div>
+            <p>ON ES TROBA NOSTRA EMPRESA?</p>
+            <div class="expContactes">NOSTRA EMPRESA ES TROBA EN CASTELLDEFELS, UNA CIUTAT DE BARCELONA EN ESPANYA. <br><br> TELEFÓN MOVIL: 678 673 242</div> 
+            <p>UBICACIÓ EN GOOGLE MAPS</p>
+            <div class="expContactes">ES SITUA AL COSTAT DE LA PLAÇA DE LA LLUNA COM PODEU VEURE A BAIX.</div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11993.342230056187!2d1.9633313671611872!3d41.27980091062189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a482be97072263%3A0x7c102b7ee443690c!2sPla%C3%A7a%20de%20la%20Lluna%2C%2008860%20Castelldefels%2C%20Barcelona!5e0!3m2!1ses!2ses!4v1585734284897!5m2!1ses!2ses" width="500" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <div class="margin">
                 <h1>¡CONTESTA AQUEST FORMULARI!</h1>
