--- a/web/index.html
+++ b/web/index.html
@@ -57,8 +57,123 @@
         </div>  
        
 
-        <div id='frontendHome'>
-            HOLA
+        <div id='frontendHome' class="fondoweb">
+            <div class="inici1">
+                INICI
+            </div>
+            <div class="iniciweb">
+                Troba els millors preus i ofertes en els destins més increibles tant com a nivell nacional com a nivell internacional. Mira tots els nostres viatjes ara mateix.
+            </div>
+            <p>MADRID</p>
+            <div class="iniciweb">
+                La capital d'Espanya, on hi ha molts llocs a visitar, Plaza mayor, Palacio Real Madrid, Parque del retiro, Puerta del sol, etc...
+            </div>
+            <div class="sliders">
+                <ul class="slider">
+                    <li id="slide1">
+                        <img src="/web/imatges/madrid2.jpg">
+                    </li>
+                    <li id="slide2">
+                        <img src="/web/imatges/madrid1.jpg">
+                    </li>
+                </ul>
+                <ul class="menuslider">
+                    <li>
+                        <a href="#slide1">1</a>
+                    </li>
+                    <li>
+                        <a href="#slide2">2</a>
+                    </li>
+                </ul>
+            </div>
+            <p>ROMA</p>
+            <div class="iniciweb">
+                Es la capital de Italia, on pots anar a veure, Coliseu Roma, Basilica de San Pedro, Panteon de Roma, Foro Romano, etc...
+            </div>
+            <div class="sliders">
+                <ul class="slider">
+                    <li id="slide3">
+                        <img src="/web/imatges/roma1.jpg">
+                    </li>
+                    <li id="slide4">
+                        <img src="/web/imatges/roma2.jpg">
+                    </li>
+                </ul>
+                <ul class="menuslider">
+                    <li>
+                        <a href="#slide3">1</a>
+                    </li>
+                    <li>
+                        <a href="#slide4">2</a>
+                    </li>
+                </ul>
+            </div>
+            <p>PARIS</p>
+            <div class="iniciweb">
+                Es la capital de França, on pots anar a veure, la Torre Eiffel, Museu del Louvre, Catedral de Notre Dame, Arc de Trionf, etc...
+            </div>
+            <div class="sliders">
+                <ul class="slider">
+                    <li id="slide5">
+                        <img src="/web/imatges/paris1.jpg">
+                    </li>
+                    <li id="slide6">
+                        <img src="/web/imatges/paris2.jpg">
+                    </li>
+                </ul>
+                <ul class="menuslider">
+                    <li>
+                        <a href="#slide5">1</a>
+                    </li>
+                    <li>
+                        <a href="#slide6">2</a>
+                    </li>
+                </ul>
+            </div>
+            <p>JAPO</p>
+            <div class="iniciweb">
+                Pots veure disverses ciutats, com Tokio, Kioto, Osaka, Nara, etc...
+            </div>
+            <div class="sliders">
+                <ul class="slider">
+                    <li id="slide7">
+                        <img src="/web/imatges/japon1.jpg">
+                    </li>
+                    <li id="slide8">
+                        <img src="/web/imatges/japon2.jpg">
+                    </li>
+                </ul>
+                <ul class="menuslider">
+                    <li>
+                        <a href="#slide7">1</a>
+                    </li>
+                    <li>
+                        <a href="#slide8">2</a>
+                    </li>
+                </ul>
+            </div>
+            <p>BARCELONA</p>
+            <div class="iniciweb">
+                Es una de les ciutats d'Espanya, on pots anar a veure, Sagrada Familia, la Rambla, Barrio gotico, Camp Nou, Park Güell, etc...
+            </div>
+            <div class="sliders">
+                <ul class="slider">
+                    <li id="slide9">
+                        <img src="/web/imatges/barcelona1.jpg">
+                    </li>
+                    <li id="slide10">
+                        <img src="/web/imatges/barcelona2.jpg">
+                    </li>
+                </ul>
+                <ul class="menuslider">
+                    <li>
+                        <a href="#slide9">1</a>
+                    </li>
+                    <li>
+                        <a href="#slide10">2</a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <div id='frontendPresentacio' class="fondoweb">
@@ -128,14 +243,6 @@
                     En el buscador de hoteles de trivago es facilísimo comparar los precios de más de 1,8 millones de hoteles de más de 190 países en más de 400 webs de reserva. Cada año recibimos 1 400 millones de visitas de viajeros que usan este buscador de hoteles para comparar distintas ofertas en el mismo destino. Además, te aportamos información útil para viajar a ciudades como Madrid o Granada. Encontrar tu hotel ideal en trivago es pan comido. Si buscas ideas para tu próxima aventura, recuerda que Barcelona y sus alrededores son una excelente opción para viajes de una semana o más, y en nuestro buscador encontrarás una gran cantidad de hoteles disponibles.    
                 </h5>
                 </div>
-            <div class="slider">
-                <ul>
-                    <li><img src="/web/imatges/fondomenu2.jpg"></li>
-                    <li><img src="/web/imatges/fondomenu3.jpg"></li>
-                    <li><img src="/web/imatges/fondomenu4.jpg"></li>
-                    <li><img src="/web/imatges/fondomenu5.jpg"></li>
-                </ul>
-            </div>
         </div>
 
         <div id='frontendProductes' class="fondoweb">
