Error menu mobil

--- a/web/index.html
+++ b/web/index.html
@@ -44,7 +44,7 @@
 
         <div id='frontendMenuMobil' class='flexColumn mobile'>
 
-            <div id="botones">
+            <div id="botones" style="display: none;">
                 <div class='botoMenu' onclick='navegacio.canviaSeccio("frontendHome")'>INICI</div>
                 <div class='botoMenu' onclick='navegacio.canviaSeccio("frontendPresentacio")'>PRESENTACIÓ</div>
                 <div class='botoMenu' onclick='navegacio.canviaSeccio("frontendProductes")'>PRODUCTES</div>
