--- a/web/index.html
+++ b/web/index.html
@@ -88,7 +88,7 @@
             </div>
             <p>ROMA</p>
             <div class="iniciweb">
-                Es la capital de Italia, on pots anar a veure, Coliseu Roma, Basilica de San Pedro, Panteon de Roma, Foro Romano, etc...
+                Es la capital de Italia, on pots anar a veure, Coliseu Roma, Basilica de San Pedro, Panteon de Roma, etc...
             </div>
             <div class="sliders">
                 <ul class="slider">
@@ -110,7 +110,7 @@
             </div>
             <p>PARIS</p>
             <div class="iniciweb">
-                Es la capital de França, on pots anar a veure, la Torre Eiffel, Museu del Louvre, Catedral de Notre Dame, Arc de Trionf, etc...
+                Es la capital de França, on pots anar a veure, la Torre Eiffel, Catedral de Notre Dame, Arc de Trionf, etc...
             </div>
             <div class="sliders">
                 <ul class="slider">
@@ -174,7 +174,74 @@
                     </li>
                 </ul>
             </div>
+            <p>ANDORRA</p>
+            <div class="iniciweb">
+                És un petit principat independent, on hi ha llocs a visitar, Andorra la vieja, el Pas de la Casa., etc...
+            </div>
+            <div class="sliders">
+                <ul class="slider">
+                    <li id="slide11">
+                        <img src="/web/imatges/andorra2.jpg">
+                    </li>
+                    <li id="slide12">
+                        <img src="/web/imatges/andorra1.jpg">
+                    </li>
+                </ul>
+                <ul class="menuslider">
+                    <li>
+                        <a href="#slide11">1</a>
+                    </li>
+                    <li>
+                        <a href="#slide12">2</a>
+                    </li>
+                </ul>
+            </div>
+            <p>CALIFORNIA</p>
+            <div class="iniciweb">
+                El seu terreny inclou platjes amb acantilats, on ha molts llocs a visitar, Parc Nacional de Yosemite, Disneyland, etc...
+            </div>
+            <div class="sliders">
+                <ul class="slider">
+                    <li id="slide13">
+                        <img src="/web/imatges/california2.jpg">
+                    </li>
+                    <li id="slide14">
+                        <img src="/web/imatges/california1.jpg">
+                    </li>
+                </ul>
+                <ul class="menuslider">
+                    <li>
+                        <a href="#slide13">1</a>
+                    </li>
+                    <li>
+                        <a href="#slide14">2</a>
+                    </li>
+                </ul>
+            </div>
+            <p>Berlin</p>
+            <div class="iniciweb">
+                Es la capital de Alemanya, on hi ha molts llocs a visitar, Porta de Brandeburgo, Edifici del Reicgstag, etc...
+            </div>
+            <div class="sliders">
+                <ul class="slider">
+                    <li id="slide15">
+                        <img src="/web/imatges/berlin1.jpg">
+                    </li>
+                    <li id="slide16">
+                        <img src="/web/imatges/berlin2.jpg">
+                    </li>
+                </ul>
+                <ul class="menuslider">
+                    <li>
+                        <a href="#slide15">1</a>
+                    </li>
+                    <li>
+                        <a href="#slide16">2</a>
+                    </li>
+                </ul>
+            </div>
         </div>
+        
 
         <div id='frontendPresentacio' class="fondoweb">
             <H4>BENVINGUTS A LA MILLOR WEB DE AGENCIES DE VIATGES</H4>
@@ -238,9 +305,9 @@
             </div>
             <H4>DIFERENTS LLOCS ON POTS ANAR</H4> 
             <div class="margin fuentepre">
-                <h5>
-                    Descubre las mejores experiencias en hoteles en los más de 1000 artículos de trivago Magazine, desde hoteles boutique en Barcelona hasta casas rurales con encanto en Andalucía.
-                    En el buscador de hoteles de trivago es facilísimo comparar los precios de más de 1,8 millones de hoteles de más de 190 países en más de 400 webs de reserva. Cada año recibimos 1 400 millones de visitas de viajeros que usan este buscador de hoteles para comparar distintas ofertas en el mismo destino. Además, te aportamos información útil para viajar a ciudades como Madrid o Granada. Encontrar tu hotel ideal en trivago es pan comido. Si buscas ideas para tu próxima aventura, recuerda que Barcelona y sus alrededores son una excelente opción para viajes de una semana o más, y en nuestro buscador encontrarás una gran cantidad de hoteles disponibles.    
+                <h5>    
+                    Descobreix les millors experiències en hotels de 5 estrelles, des d'hotels a Barcelona cases rurals amb encant a Galicia.
+                    Al cercador d'hotels de aquesta empresa és facilíssim comparar els preus de més de 1,8 milions d'hotels de més de 190 països en més de 400 webs per servei. Cada any rebem 1 400 milions de visites de viatgers que fan servir aquest cercador d'hotels per comparar diferents ofertes en la mateixa destinació. A més, et aportem informació útil per viatjar a ciutats com Madrid o Granada. Trobar el teu hotel ideal aqui és bufar i fer ampolles. Si busques idees per a la teva pròxima aventura, recorda que Barcelona i els seus voltants són una excel·lent opció per a viatges d'una setmana o més, i en el nostre cercador trobaràs una gran quantitat d'hotels disponibles.
                 </h5>
                 </div>
         </div>
