--- a/web/index.html
+++ b/web/index.html
@@ -218,7 +218,7 @@
                     </li>
                 </ul>
             </div>
-            <p>Berlin</p>
+            <p>BERLIN</p>
             <div class="iniciweb">
                 Es la capital de Alemanya, on hi ha molts llocs a visitar, Porta de Brandeburgo, Edifici del Reicgstag, etc...
             </div>
